tests/Tuc/Fixtures/errors/TooMuchIndented.tuc
tuc parse error test
participants
    GenericService parts

GenericService
        "This is too much indented"
